--- a/colors.html
+++ b/colors.html
@@ -1,11 +1,25 @@
 <html>
+<head>
+<style>
+.red { color: red; }
+.green { color: green; }
+.blue { color: blue; }
+.gold { color: gold; }
+.yellow { color: yellow; }
+.magenta { color: magenta; }
+</style>
+</head>
+
 <body>
-<h1 align="center"> COLORS</h1>
-<h1 style="color:red"> RED </h1>
-<h2 style="color:green"> GREEN </h2>
-<h3 style="color:blue"> BLUE </h3>
-<h1 style="color:gold"> GOLD </h1>
-<h2 style="color:yellow"> YELLOW </h2>
-<h3 style="color:magenta"> MAGENTA </h3>
+
+<h1 align="center">COLORS</h1>
+
+<h1 class="red">RED</h1>
+<h2 class="green">GREEN</h2>
+<h3 class="blue">BLUE</h3>
+<h1 class="gold">GOLD</h1>
+<h2 class="yellow">YELLOW</h2>
+<h3 class="magenta">MAGENTA</h3>
+
 </body>
 </html>
