--- a/changebackground.html
+++ b/changebackground.html
@@ -5,8 +5,8 @@ function change(col)
 {
 switch(col)
 {
-case 'red':document.bgColor=col; break;
-case 'green':document.bgColor=col; break;
+case 'gold':document.bgColor=col; break;
+case 'brown':document.bgColor=col; break;
 case 'blue':document.bgColor=col; break;
 }
 }
@@ -15,8 +15,8 @@ case 'blue':document.bgColor=col; break;
   
 <body>
 <h1 align="center"> Change BackGround </h1>  
-<h1><input type="radio" name="c" onClick="change('red')">RED</h1>
-<h1><input type="radio" name="c" onClick="change('green')">GREEN</h1>
+<h1><input type="radio" name="c" onClick="change('gold')">GOLD</h1>
+<h1><input type="radio" name="c" onClick="change('brown')">BROWN</h1>
 <h1><input type="radio" name="c" onClick="change('blue')">BLUE</h1>
 </body>
 </html>
